--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/panettone.html" target="_blank" rel="noopener noreferrer">Panettone</a>
 </body>
 </html>
