Complete Iteration 4: add more recipes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/panettone.html" target="_blank" rel="noopener noreferrer">Panettone</a>
+    <a href="recipes/cioccolata-calda.html" target="_blank" rel="noopener noreferrer">Cioccolata Calda</a>
+    <a href="recipes/authentic-mexican-hot-chocolate.html" target="_blank" rel="noopener noreferrer">Authentic Mexican Hot Chocolate</a>
 </body>
 </html>
