--- a/recipes/cioccolata-calda.html
+++ b/recipes/cioccolata-calda.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html2
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,9 +8,9 @@
 <body>
     <h1>Cioccolata Calda</h1>
     <img src="https://www.allrecipes.com/thmb/bHCKPGNNbUNJZHMk3DSZ5NxNh_I=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4207997_Cioccolata-Calda-Hot-Chocolate-Italian-Style-4x3-1-b8f56a4d77f74233a3cbdd6a04a17a1e.jpg" alt="Cioccolata Calda">
-    <h3>Description</h3>
+    <h2>Description</h2>
     <p>Hot chocolate Italian-style is one of the most amazing treats in the world! You have to try this pudding-like chocolate decadence! Add some Irish cream, cinnamon, and whipped cream for a fun variation, or create your own!</p>
-    <h3>Ingredients</h3>
+    <h2>Ingredients</h2>
     <ul>
         <li>3 tablespoons cocoa powder</li>
         <li>1 ½ tablespoons white sugar</li>
@@ -18,7 +18,7 @@
         <li>2 tablespoons milk</li>
         <li>1 tablespoon cornstarch</li>
     </ul>
-    <h3>Steps</h3>
+    <h2>Steps</h2>
     <ol>
         <li>Mix the cocoa powder and sugar together in a small saucepan. Stir the 1 1/2 cups milk into the saucepan until the sugar has dissolved. Place over low heat; slowly bring the mixture to a low simmer.</li>
         <li>Whisk 2 tablespoons of milk together with the cornstarch in a small cup; slowly whisk the cornstarch slurry into the cocoa mixture. Continue cooking, whisking continually, until the hot chocolate reaches a pudding-like thickness, 2 to 3 minutes.</li>
